# cs2025-ntl-misprotected

./: README.md
ValVotaBallotManualEntry/: .clang-format  .gitignore  CMakeLists.txt  ValVotaBallotManualEntry.vmp
ValVotaBallotManualEntry/configs/: ValVotaBallotManualEntry.ini
ValVotaBallotManualEntry/src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  authdialog.cpp  authdialog.h  authdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h  valvota.proto  warningdialog.cpp  warningdialog.h  warningdialog.ui
valvota/: go.mod  go.sum  justfile
valvota/cmd/valvota/: main.go
valvota/internal/service/: submit_votes.go  submit_votes_test.go
valvota/proto/: valvota.pb.go  valvota.proto  valvota_grpc.pb.go
walkthrough/: WALKTHROUGH.md
